Add some settings files

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,27 @@
-lib-cov
-*.seed
+*.db
+*.egg
+*.egg-info
 *.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-
-pids
-logs
-results
-
+*.mo
+*.orig
+*.py[cod]
+*.sqlite
+*.swp
+*.tap
+*.DS_Store
+.coverage
+.installed.cfg
+.mr.developer.cfg
+.project
+.pydevproject
+.tox/
+develop-eggs/
+dist/
+eggs/
+env/
+node_modules/
+sdist/
+nosetests.xml
 npm-debug.log
+pip-log.txt
+testem.*.*.*.json
