--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,12 @@ language: node_js
 node_js:
   - "0.11"
 
+before_install:
+  - npm install -g grunt-cli testem
+
 script:
-  - "grunt travis"
+  - grunt travis
 
 branches:
   only:
     - master
-
-before_script:
-  - npm install -g grunt-cli testem
-  - npm install
