--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_install:
   - npm install -g grunt-cli testem
 
 script:
-  - npm test
+  - testem launchers
+  - grunt travis
 
 branches:
   only:
