--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,8 @@ language: node_js
 node_js:
   - "0.11"
 
-# It is used my forked Testem repository.
-# Because, probably, Testem will not fix `_.bindAll(this)` bug yet.
 before_install:
-  - npm install -g grunt-cli git://github.com/kjirou/testem.git
+  - npm install -g grunt-cli testem
 
 before_script:
   - testem launchers
