--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-concat": "*",
     "grunt-contrib-uglify": "*",
     "grunt-contrib-watch": "*",
+    "grunt-mocha-test": "*",
     "grunt-notify": "*",
     "grunt-testem": "*",
     "grunt-text-replace": "*",
@@ -25,6 +26,6 @@
   },
   "main": "rpglevel.js",
   "scripts": {
-    "test": "grunt build:node; ./node_modules/mocha/bin/mocha ./build/test.js"
+    "test": "grunt test:node"
   }
 }
