Fix invalid npm script

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "browser-test": "testem",
     "ci-browser-test": "testem ci -l firefox,phantomjs",
-    "build": "cp node_modules/mocha/mocha.{css,js} public/dist & browserify public/tests.js > public/dist/bundle.js",
+    "build": "cp 'node_modules/mocha/mocha.*' public/dist & browserify public/tests.js > public/dist/bundle.js",
     "lint": "jshint index.js",
     "test": "mocha"
   }
