--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "2.0.0",
   "author": "kjirou",
   "bugs": {
-    "url": "https://github.com/kjirou/npm-rpglevel/issues"
+    "url": "https://github.com/kjirou/rpglevel/issues"
   },
   "dependencies": {
     "lodash": "3.6.0"
@@ -20,7 +20,7 @@
   "directories": {
     "test": "test"
   },
-  "homepage": "https://github.com/kjirou/npm-rpglevel",
+  "homepage": "https://github.com/kjirou/rpglevel",
   "keywords": [
     "rpg",
     "game"
@@ -29,7 +29,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kjirou/npm-rpglevel"
+    "url": "https://github.com/kjirou/rpglevel"
   },
   "scripts": {
     "browser-test": "testem",
